# dynisland-core

./: Cargo.toml
src/: activity_map.rs  base_module.rs  dynamic_activity.rs  dynamic_property.rs  lib.rs
src/graphics/: mod.rs  util.rs
src/graphics/activity_widget/: boxed_activity_mode.rs  imp.rs  local_css_context.rs  mod.rs  object_subclass_impl.rs
src/graphics/activity_widget/layout_manager/: imp.rs  mod.rs  object_subclass_impl.rs
src/graphics/widgets/rolling_char/: imp.rs  mod.rs  object_subclass_impl.rs
src/graphics/widgets/scrolling_label/: imp.rs  local_css_context.rs  mod.rs  object_subclass_impl.rs
