[package]
name = "dynisland-core"
version = "0.1.2"
authors = ["cr3eperall"]
description = "Common logic and widgets for dynisland modules and layout managers"
license = "MIT"
repository = "https://github.com/cr3eperall/dynisland-core"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dynisland-abi = { path="../dynisland-abi", version = "0.1.2"}
ron = "0.8.1"

tokio = { version = "1.39.0", features = ["rt", "time", "sync", "macros"] }
anyhow = "1.0.86"
env_logger = "0.11.2"
clap = { version = "4.4.1", features = ["derive"] }
dyn-clone = "1.0.13"
rand = "0.8.5"
notify = { version = "6.1.1", features = ["fsevent-sys"] }
concat-idents = "1.1.5"
const-random = "0.1.17"
